test/fixtures/invalid/badname.fez
<script>
  onInit() {
    this.state.value = 'test'
  }
</script>

<div>{{ state.value }}</div>
